basic file navigation

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -8,56 +8,59 @@
   <body>
     <div class="left"></div>
     <div class="right">
-      <div class="inputs">
-        <input
-          type="text"
-          id="path"
-          value="C:/Users/hayda/Desktop"
-          class="box"
-        />
-        <input
-          type="text"
-          id="search-box"
-          placeholder="Search..."
-          class="box"
-        />
-      </div>
-      <div class="options">
-        <div class="view">
-          <button class="box">
-            <iconify-icon
-              icon="mingcute:grid-line"
-              width="20"
-              height="20"
-            ></iconify-icon>
-          </button>
-          <button class="box active">
-            <iconify-icon
-              icon="tabler:list"
-              width="20"
-              height="20"
-            ></iconify-icon>
-          </button>
+      <div class="upper-container">
+        <div class="inputs">
+          <input
+            type="text"
+            id="path"
+            value="/"
+            class="box"
+          />
+          <input
+            type="text"
+            id="search-box"
+            placeholder="Search..."
+            class="box"
+          />
         </div>
-        <div class="order">
-          <button class="box">
-            <iconify-icon
-              icon="pepicons-pop:sort"
-              width="16"
-              height="16"
-            ></iconify-icon>
-            Sort by
-          </button>
-          <button class="box">
-            <iconify-icon
-              icon="mingcute:filter-line"
-              width="16"
-              height="16"
-            ></iconify-icon
-            >Filter
-          </button>
+        <div class="options">
+          <div class="view">
+            <button class="box">
+              <iconify-icon
+                icon="mingcute:grid-line"
+                width="20"
+                height="20"
+              ></iconify-icon>
+            </button>
+            <button class="box active">
+              <iconify-icon
+                icon="tabler:list"
+                width="20"
+                height="20"
+              ></iconify-icon>
+            </button>
+          </div>
+          <div class="order">
+            <button class="box">
+              <iconify-icon
+                icon="pepicons-pop:sort"
+                width="16"
+                height="16"
+              ></iconify-icon>
+              Sort by
+            </button>
+            <button class="box">
+              <iconify-icon
+                icon="mingcute:filter-line"
+                width="16"
+                height="16"
+              ></iconify-icon
+              >Filter
+            </button>
+          </div>
         </div>
       </div>
+      
       <div class="list">
       </div>
     </div>
