Added Search Func, back button and customized scrollbar

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -10,6 +10,7 @@
     <div class="right">
       <div class="upper-container">
         <div class="inputs">
+          <button class="box" id="back-button"><iconify-icon icon="ion:arrow-back-outline" width="15" height="15"></iconify-icon></button>
           <input
             type="text"
             id="path"
