Added tooltips for icons

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -10,7 +10,7 @@
     <div class="right">
       <div class="upper-container">
         <div class="inputs">
-          <button class="box" id="back-button"><iconify-icon icon="ion:arrow-back-outline" width="15" height="15"></iconify-icon></button>
+          <button class="box" id="back-button" title="Go back"><iconify-icon icon="ion:arrow-back-outline" width="15" height="15"></iconify-icon></button>
           <input
             type="text"
             id="path"
@@ -26,14 +26,14 @@
         </div>
         <div class="options">
           <div class="view">
-            <button class="box">
+            <button class="box" title="Grid view">
               <iconify-icon
                 icon="mingcute:grid-line"
                 width="20"
                 height="20"
               ></iconify-icon>
             </button>
-            <button class="box active">
+            <button class="box active" title="List view">
               <iconify-icon
                 icon="tabler:list"
                 width="20"
