--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -77,7 +77,7 @@
             <input type="radio" name="type" id="folder" value="Folder"/>
             <label for="folder">Folder</label>
           </div>
-          <input type="text" autofocus placeholder="Name of file" class="box" id="file_name_input"/>
+          <input type="text" autofocus placeholder="Name of file" class="box" id="file_name_input" required/>
           <button type="submit" class="submit">Create</button>
         </form>
       </dialog>
