Feature: Create new folder

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -78,7 +78,7 @@
             <label for="folder">Folder</label>
           </div>
           <input type="text" autofocus placeholder="Name of file" class="box" id="file_name_input" required/>
-          <button type="submit" class="submit">Create</button>
+          <button type="submit" class="submit">Create in current directory</button>
         </form>
       </dialog>
     </div>
