Feature: Rotation animation for dialog

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -64,7 +64,7 @@
       
       <div class="list">
       </div>
-      <button id="create" title="Create">
+      <button id="create" class="create" title="Create">
         <iconify-icon icon="ic:baseline-plus" width="24" height="24"></iconify-icon>
       </button>
       <dialog id="create_dialog" class="box">
@@ -80,6 +80,9 @@
           <input type="text" autofocus placeholder="Name of file" class="box" id="file_name_input" required/>
           <button type="submit" class="submit">Create in current directory</button>
         </form>
+        <button id="close" class="create" title="Close">
+          <iconify-icon icon="ic:baseline-plus" width="24" height="24"></iconify-icon>
+        </button>
       </dialog>
     </div>
   </body>
