Feature: Added reload button

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -17,6 +17,9 @@
             value="/"
             class="box"
           />
+          <button class="box" id="reload-button" title="Reload">
+            <iconify-icon icon="tabler:reload" width="15" height="15"></iconify-icon>
+          </button>
           <input
             type="text"
             id="search-box"
